fix(post): spacing

--- a/styles/base.css
+++ b/styles/base.css
@@ -195,8 +195,7 @@ h4,
     line-height: var(--h-sm-line-height);
 }
 
-.secondary-sans-serif-xs,
-.blog_post h3 {
+.secondary-sans-serif-xs {
     font-family: var(--bs-font-sans-serif);
     font-size: 1rem;
     font-style: normal;
@@ -587,10 +586,16 @@ header {
     -webkit-mask-position: center center;
 }
 
-.blog_post h2,
+.blog_post h2 {
+    margin: 6rem 0 2rem 0;
+}
+
 .blog_post h3 {
-    margin-top: 0.5rem;
-    margin-bottom: 1.5rem;
+    font-family: var(--bs-font-monospace);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: var(--xs-line-height)
 }
 
 .blog_post p:not(:last-child) {
@@ -599,6 +604,11 @@ header {
 
 .blog_post p:last-child {
     margin-bottom: 0;
+}
+
+.blog_post .language-plaintext code {
+    font-weight: 700;
+    margin: 2.5rem 0;
 }
 
 .blog_post img {
